[package]
name = "ruby-flasher"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon"]}

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled"] }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
    "time",
    "macros",
    "fs"
] }
log = "0.4"
async-trait = "0.1"
russh = "0.49.2"
anyhow = "1.0"
env_logger = "0.11"
rust-embed="8.6.0"

[package.metadata.bundle]
name = "RubyFPV Flasher"
icon = ["assets/ruby.ico"]
identifier = "com.magister.rubyfpv_flasher"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "ld-linux*",
    "libX*",
    "libx*",
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
