[package]
name = "ruby-flasher"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon"]}
winreg = "0.55.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.22"

[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled"] }
fltk-theme = "0.7.9"
tokio = { version = "1.45.1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
    "time",
    "macros",
    "fs"
] }
log = "0.4.27"
async-trait = "0.1.88"
russh = "0.49.2"
anyhow = "1.0.98"
thiserror = "2.0.12"
env_logger = "0.11.8"
rust-embed="8.7.2"

[package.metadata.bundle]
name = "RubyFPV Flasher"
icon = ["assets/ruby.ico"]
identifier = "com.magister.rubyfpv_flasher"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "ld-linux*",
    "libX*",
    "libx*",
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
